# ha-home-keeper

./: .gitattributes  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  IDEAS.md  README.md  RELEASE.md  data.json  hacs.json  index.html  package-lock.json  package.json  pyproject.toml  requirements-test.txt  sitemap.xml  vitest.config.js
.amazonq/rules/: architecture-and-code.md  testing-and-workflow.md
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  docs-deploy.yml  docs-preview.yml  e2e.yml  integration.yml  lint.yml  post_coverage_to_pr.yml  preview-release.yml  pytest_coverage.yml  release.yml  test.yml  walkthrough-preview.yml
assets/js/: 0e384e19.090edf86.js  0e384e19.29fb9582.js  0e384e19.72cc7669.js  0e384e19.881b0913.js  0e384e19.a1c2aeb4.js  1eacf10c.11116f5b.js  1eacf10c.beda188d.js  1eacf10c.c61a1620.js  1eacf10c.c79bdae2.js  1eacf10c.f271fc66.js  28221a83.1427a60d.js  28221a83.3a55cf0e.js  28221a83.58db4a49.js  28221a83.a007e770.js  28221a83.f67ea52a.js  293a8133.42e70ea9.js  293a8133.b0c4263c.js  293a8133.c3e79e79.js  293a8133.f56819e5.js  2de9ff66.0b864f98.js  33a0bd42.9f3a74e9.js  33a0bd42.a6fab038.js  33a0bd42.c33d5152.js  33a0bd42.c4fac5a7.js  33a0bd42.ca7f93de.js  33a0bd42.f37cc571.js  3b8c55ea.3614e4e0.js  416f68d8.1fc4a2aa.js  416f68d8.70b1a2bf.js  44aadd2c.60b034c9.js  44aadd2c.689bc191.js  44aadd2c.6af7e405.js  44aadd2c.98e0f113.js  45a5cd1f.9efa757f.js  482aaeb7.34aa9041.js  482aaeb7.6241668b.js  482aaeb7.7c8368f5.js  4a8dcd3f.19ccd109.js  4a8dcd3f.42321cf9.js  4a8dcd3f.c6b3f5f2.js  (+79 more)
ci/: build-panel.sh  build-zip.sh  capture-video.sh  e2e-up.sh  i18n-coverage.py  install-deps.sh  setup-browser-env.sh  test-e2e.sh  test-frontend.sh  test-python-integration.sh  test-python-unit.sh
custom_components/home_keeper/: __init__.py  assets.py  backend_i18n.py  binary_sensor.py  button.py  calendar.py  card.py  companions.py  companions_catalog.py  config_flow.py  const.py  coordinator.py  device_trigger.py  devices.py  diagnostics.py  documents.py  entity.py  events.py  intents.py  inventory.py  manifest.json  manuals.py  models.py  notifications.py  notifier.py  number.py  options.py  panel.py  problem_sync.py  problem_tasks.py  profiles.py  quality_scale.yaml  reconcile.py  recurrence.py  sensor.py  sensor_tasks.py  sensor_watcher.py  services.py  services.yaml  store.py  (+6 more)
custom_sentences/en/: home_keeper.yaml
developer/: architecture.html  events.html  glue-integrations.html  integrating.html
docs/: ACTIONABLE_NOTIFICATIONS_PLAN.md  BACKDATE_COMPLETION_PLAN.md  BATTERY_NOTES_PLAN.md  COMPETITOR-RESEARCH.md  COMPLETION_HISTORY_PLAN.md  DESIGN.md  EVENTS.md  EVENTS_PLAN.md  GLUE_INTEGRATIONS.md  INTEGRATING.md  MAINTENANCE_SUPPORTER_PLAN.md  MINOR_BUGS_FIX_PLAN.md  PER_COMPLETION_METADATA_PLAN.md  PROFILES_REFACTOR_PLAN.md  PR_PREVIEW_RELEASE_PLAN.md  REVIEW_FIX_PLAN.md  SENSOR_TASKS_PLAN.md  VISUAL_TESTING_PLAN.md  concepts.html  date-control-exploration.md  installation.html  intro.html  release-notes.html
docs/guide/: appliances.html  completions.html  (+14 more)
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_6b71c2d8cf329a53___init___py.html  z_6b71c2d8cf329a53_assets_py.html  z_6b71c2d8cf329a53_backend_i18n_py.html  z_6b71c2d8cf329a53_binary_sensor_py.html  z_6b71c2d8cf329a53_button_py.html  z_6b71c2d8cf329a53_calendar_py.html  z_6b71c2d8cf329a53_card_py.html  z_6b71c2d8cf329a53_companions_catalog_py.html  z_6b71c2d8cf329a53_companions_py.html  z_6b71c2d8cf329a53_config_flow_py.html  z_6b71c2d8cf329a53_const_py.html  z_6b71c2d8cf329a53_coordinator_py.html  z_6b71c2d8cf329a53_device_trigger_py.html  z_6b71c2d8cf329a53_devices_py.html  z_6b71c2d8cf329a53_diagnostics_py.html  z_6b71c2d8cf329a53_documents_py.html  z_6b71c2d8cf329a53_entity_py.html  z_6b71c2d8cf329a53_events_py.html  z_6b71c2d8cf329a53_inventory_py.html  z_6b71c2d8cf329a53_manuals_py.html  z_6b71c2d8cf329a53_models_py.html  z_6b71c2d8cf329a53_notifications_py.html  z_6b71c2d8cf329a53_notifier_py.html  z_6b71c2d8cf329a53_number_py.html  z_6b71c2d8cf329a53_options_py.html  z_6b71c2d8cf329a53_panel_py.html  z_6b71c2d8cf329a53_problem_sync_py.html  z_6b71c2d8cf329a53_problem_tasks_py.html  z_6b71c2d8cf329a53_profiles_py.html  z_6b71c2d8cf329a53_reconcile_py.html  z_6b71c2d8cf329a53_recurrence_py.html  z_6b71c2d8cf329a53_sensor_py.html  z_6b71c2d8cf329a53_sensor_tasks_py.html  z_6b71c2d8cf329a53_sensor_watcher_py.html  z_6b71c2d8cf329a53_store_py.html  z_6b71c2d8cf329a53_todo_py.html  (+2 more)
tests/: conftest.py
website/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  sidebarsDeveloper.ts
(+2480 files in other folders)
