[project]
name = "home_keeper"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "requests>=2.31"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "real_ha: marks tests that use real HA modules (not mocked)",
]

[tool.coverage.run]
branch = true
source = ["custom_components/home_keeper"]
relative_files = true

[tool.coverage.report]
show_missing = true
