[project]
name = "home_keeper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["Babel>=2.12"]

[project.optional-dependencies]
dev = ["pytest>=9.1.1", "pytest-cov>=7.1.0", "requests>=2.34.2"]

# Make the integration pip-installable straight from git (no PyPI publish needed),
# so other integrations can depend on it in their test suite and import
# ``home_keeper.testing``. Home Assistant itself loads the integration from
# ``custom_components/`` and ignores this packaging metadata.
#   pip install "home-keeper @ git+https://github.com/prestomation/ha-home-keeper@main"
[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["custom_components"]
include = ["home_keeper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "real_ha: marks tests that use real HA modules (not mocked)",
]

[tool.coverage.run]
branch = true
source = ["custom_components/home_keeper"]
relative_files = true
# testing.py is a test-support helper for *other* integrations (exercised by their
# suites, not Home Keeper's own), so it shouldn't count toward product coverage.
omit = ["custom_components/home_keeper/testing.py"]

[tool.coverage.report]
show_missing = true

# Strict typing is a Platinum quality-scale gate (see custom_components/home_keeper/
# quality_scale.yaml). CI runs `mypy custom_components/home_keeper` with Home
# Assistant installed so HA's own types resolve; keep the integration error-free.
# Target 3.13 to match modern Home Assistant (it uses 3.13-only typing syntax, so a
# lower target makes mypy fail to even parse HA's own sources).
[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# Pragmatic-but-meaningful set: pyflakes/pycodestyle, import sorting, pyupgrade,
# bugbear, comprehensions, simplify, and Ruff's own rules.
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-third-party = ["homeassistant"]

[tool.ruff.lint.per-file-ignores]
# Tests favour explicit loops / try-except over these "simplify" suggestions.
"tests/**" = ["SIM105", "SIM113"]
